--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
  
   "devDependencies": {
     "chai": "~1.9.1",
-    "mocha": "~1.18.2"
+    "mocha": "~1.18.2",
+    "download": "~0.1.15"
   },
  
   "scripts": {
