--- a/package.json
+++ b/package.json
@@ -1,47 +1,46 @@
 {
-  "name": "shp.js",
+  "name": "ishp",
   "version": "0.0.0",
-  "description": "Nothing to say",
-  "main": "ShapeFile.js",
- 
+  "author": "rthoth <ronaldo.asilva@gmail.com>",
+  "description": "A spatial indexed (qix -> http://mapserver.org/utilities/shptree.html) Shapefile reader",
+  "homepage": "https://github.com/rthoth/ishp",
+  "bugs": {
+    "url": "https://github.com/rthoth/ishp/issues"
+  },
+
+  "main": "index.js",
+  "license": "MIT",
+
   "directories": {
     "test": "test"
   },
- 
-  "dependencies": {
-    "graceful-fs": "~2.0",
-    "jsts": "~0.13.4",
-    "proj4": "~2.1.2",
-    "promised-io": "~0.3.4",
-    "step": "~0.0"
-  },
- 
-  "devDependencies": {
-    "chai": "~1.9.1",
-    "mocha": "~1.18.2",
-    "yadown": "*"
-  },
- 
+
   "scripts": {
-    "test": "mocha"
+    "test": "mocha -R spec test/*Test.js"
   },
- 
+  
   "repository": {
     "type": "git",
-    "url": "git://github.com/rthoth/shp.js.git"
+    "url": "https://github.com/rthoth/ishp.git"
   },
- 
+  
   "keywords": [
     "shp",
-    "qix"
+    "shapefile",
+    "spatial",
+    "index",
+    "quadtree"
   ],
- 
-  "author": "rthoth <ronaldo.asilva@gmail.com>",
- 
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/rthoth/shp.js/issues"
+
+  "devDependencies": {
+    "download": "0.1.17",
+    "each-async": "0.1.3",
+    "mocha": "1.20.0"
   },
- 
-  "homepage": "https://github.com/rthoth/shp.js"
+
+  "dependencies": {
+    "idbf": "0.0.0",
+    "jsts": "0.13.4",
+    "promise": "5.0.0"
+  }
 }
