--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
 
   "scripts": {
-    "test": "vows --spec test/*Test.js"
+    "test": "mocha -R spec test/*Test.js"
   },
   
   "repository": {
@@ -44,7 +44,7 @@
     "chai": "1.9.1",
     "download": "0.1.17",
     "each-async": "0.1.3",
-    "vows": "0.7.0",
+    "mocha": "1.20.1",
     "sinon-chai": "2.5.0"
   }
 }
