--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
 
   "scripts": {
-    "test": "mocha -R spec test/*Test.js"
+    "test": "mocha -G -R spec test/*Test.js"
   },
   
   "repository": {
