--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "idbf": "*",
     "jsts": "~0.13.4",
     "js-extend": "^0.0.2",
-    "nested-error-stacks": "0.0.3",
+    "nested-error": "1.0.0",
     "promise": "^5.0.0"
   },
 
