--- a/package.json
+++ b/package.json
@@ -7,23 +7,18 @@
   "bugs": {
     "url": "https://github.com/rthoth/ishp/issues"
   },
-
   "main": "index.js",
   "license": "MIT",
-
   "directories": {
     "test": "test"
   },
-
   "scripts": {
     "test": "mocha -R progress --timeout 500 test/*Test.js"
   },
-  
   "repository": {
     "type": "git",
     "url": "https://github.com/rthoth/ishp.git"
   },
-  
   "keywords": [
     "shp",
     "shapefile",
@@ -31,7 +26,6 @@
     "index",
     "quadtree"
   ],
-
   "dependencies": {
     "idbf": "*",
     "jsts": "~0.13.4",
@@ -39,11 +33,13 @@
     "nested-error": "1.0.0",
     "promise": "^5.0.0"
   },
-
   "devDependencies": {
     "chai": "1.9.1",
     "download": "0.1.17",
     "each-async": "0.1.3",
+    "grunt": "0.4.5",
+    "grunt-jsdox": "0.1.4",
+    "jsdox": "0.2.6",
     "mocha": "1.20.1",
     "sinon-chai": "2.5.0"
   }
