--- a/.gitignore
+++ b/.gitignore
@@ -24,4 +24,8 @@ build/Release
 # see https://npmjs.org/doc/faq.html#Should-I-check-my-node_modules-folder-into-git
 node_modules
 
+# test
 test/data/
+
+# docs
+docs/
