--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "mocha -R progress --timeout 1000 test/*Test.js",
+    "test": "mocha -R progress --timeout 10000 test/*Test.js",
     "docs": "jsdox -o docs lib/"
   },
   "repository": {
@@ -28,7 +28,7 @@
     "quadtree"
   ],
   "dependencies": {
-    "idbf": "*",
+    "idbf": "1.0.0",
     "jsts": "~0.13",
     "js-extend": "^0.0.2",
     "promise": "^7.0.3"
